Footer Changes Fixed footer spacing

--- a/mockups/css/s4yt.css
+++ b/mockups/css/s4yt.css
@@ -187,11 +187,13 @@ html, body {
     
 #powerbyt{
   text-align: left;
-  font-size: 60px;
+  font-size: 55px;
   color: white;
-  margin-top: 5px;
-  margin-right: 10px;
+  margin-right: 25px;
+  margin-top:5px;
+  margin-left:-60px;
 }
+
 
 .listinfo{
   padding: 10px;
